# paint_field

./: .gitignore  README.md  pinta_campo.py  requirements.txt  setup.cfg
src/paint_field/: paint_field.py
