[metadata]
name = paint-field-alvaromartinezconde
version = 0.0.0
author = Alvaro Martinez-Conde
author_email = alvaromartinezconde@ucm.es
description = file: README.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alvaromartinezconde/pinta_campo
project_urls =
    Bug Tracker = https://github.com/alvaromartinezconde/pinta_campo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src